--- a/style.css
+++ b/style.css
@@ -1,3 +1,31 @@
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin: 0;
+  min-height: 100vh;
+}
+
+.container {
+  height: 140px;
+  padding: 16px;
+  background: plum;
+  border: 4px solid indigo;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /*justify-content: space-between;*/
+  gap: 8px;
+ 
+}
+
+.item {
+  width: 60px;
+  height: 60px;
+  border: 4px solid darkslategray;
+  background: skyblue;
+  flex: 1;
+  
+}
+
 .flxcont{
   display: flex;
 }
